Update Directed payment website in css
Little update with css of the directed page after submit

--- a/MenuApplication.css
+++ b/MenuApplication.css
@@ -28,6 +28,13 @@ body {
     color: #f63126;
 }
 
+#submit {
+    color: darkgray;
+    text-align-last: center;
+    align-self: auto;
+    margin-top: 280px;
+}
+
 .footer {
     position: fixed;
     left: 0;
